# sekai

./: README.md  pyproject.toml
sekai/: __init__.py  _types.py  error.py  registry.py  sekai.py
sekai/backend/: __init__.py  numpy_backend.py  protocol.py
sekai/core/: __init__.py  agent.py  env.py  multi_agent.py  result.py  wrapper.py
sekai/envs/: __init__.py  cartpole.py  gridworld.py
sekai/registry/: __init__.py  registry.py  spec.py
sekai/rendering/: __init__.py  renderer.py
sekai/spaces/: __init__.py  box.py  dict.py  dict_space.py  discrete.py  multi_binary.py  multi_discrete.py  space.py  tuple.py  tuple_space.py  utils.py
sekai/stats/: __init__.py  collectors.py  tracker.py
sekai/utils/: __init__.py  checker.py  pickle.py  seeding.py  typing.py
sekai/vector/: __init__.py  async_vec_env.py  proc_vec_env.py  result.py  sync_vec_env.py  vec_env.py  vec_wrapper.py
sekai/wrappers/: __init__.py  autoreset.py  base.py  clip_action.py  clip_reward.py  flatten_obs.py  frame_stack.py  normalize_obs.py  normalize_reward.py  order_enforcing.py  record_episode.py  rescale_action.py  stats.py  time_limit.py  transform_obs.py  transform_reward.py
tests/: test_agent.py  test_env.py  test_registry.py  test_spaces.py  test_wrappers.py
