[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sekai"
version = "0.1.2"
description = "A modern, flexible RL environment framework for complex and financial market environments"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Samson Qian", email = "samson.qian@qiancapital.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "cloudpickle>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "mypy>=1.0",
    "ruff>=0.1",
]
torch = ["torch>=2.0"]
all = ["sekai[dev,torch]"]

[project.urls]
Homepage = "https://github.com/qiancapital/sekai"

[tool.setuptools.packages.find]
where = ["."]
include = ["sekai*"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
